--- a/public/style.css
+++ b/public/style.css
@@ -358,8 +358,8 @@ header #bkgServicos{
   margin-left: 18%;
 }
 header #bkgCon{
-  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(0, 0, 0,1),rgba(0, 0, 0, .5),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, .3),rgba(0, 0, 0,.9),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)),
-  url('assets/equipo.jpg');
+  background-image:  linear-gradient(to right, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, .3),rgba(0, 0, 0, .6),rgba(0, 0, 0,.9),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)),
+    url('assets/equipo.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -476,7 +476,7 @@ body {
   position: relative;
   height: 100%;
   /* aquiiiiiiiiiiiiiii----------------------------------*/
-  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(255, 255, 255, 0),rgba(255, 255, 255, .2),rgba(255, 255, 255,.5),rgba(255, 255, 255, .8),rgba(255, 255, 255, 1),rgba(255, 255, 255, 1)),
+  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, .2),rgba(0, 0, 0,.5),rgba(0, 0, 0, .8),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)),
   url('/assets/neonbrand-mlZzMow-CQw-unsplash.jpg');
 }
 #dosAnim{
@@ -484,7 +484,7 @@ body {
   position: relative;
   height: 100%;
   /* aquiiiiiiiiiiiiiii----------------------------------*/
-  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(255, 255, 255, 0),rgba(255, 255, 255, .2),rgba(255, 255, 255,.5),rgba(255, 255, 255, .8),rgba(255, 255, 255, 1),rgba(255, 255, 255, 1)),
+  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, .2),rgba(0, 0, 0,.5),rgba(0, 0, 0, .8),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)),
   url('/assets/neonbrand-mlZzMow-CQw-unsplash.jpg');
 }
  #tresAnim{
@@ -492,7 +492,7 @@ body {
   position: relative;
   height: 100%;
   /* aquiiiiiiiiiiiiiii----------------------------------*/
-  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(255, 255, 255, 0),rgba(255, 255, 255, .2),rgba(255, 255, 255,.5),rgba(255, 255, 255, .8),rgba(255, 255, 255, 1),rgba(255, 255, 255, 1)),
+  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, .2),rgba(0, 0, 0,.5),rgba(0, 0, 0, .8),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)),
   url('/assets/neonbrand-mlZzMow-CQw-unsplash.jpg');
 }
  #cuatroAnim{
@@ -500,7 +500,7 @@ body {
   position: relative;
   height: 100%;
   /* aquiiiiiiiiiiiiiii----------------------------------*/
-  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(255, 255, 255, 0),rgba(255, 255, 255, .2),rgba(255, 255, 255,.5),rgba(255, 255, 255, .8),rgba(255, 255, 255, 1),rgba(255, 255, 255, 1)),
+  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, .2),rgba(0, 0, 0,.5),rgba(0, 0, 0, .8),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)),
   url('/assets/neonbrand-mlZzMow-CQw-unsplash.jpg');
 }
 #cincoAnim{
@@ -508,7 +508,7 @@ body {
   position: relative;
   height: 100%;
   /* aquiiiiiiiiiiiiiii----------------------------------*/
-  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(255, 255, 255, 0),rgba(255, 255, 255, .2),rgba(255, 255, 255,.5),rgba(255, 255, 255, .8),rgba(255, 255, 255, 1),rgba(255, 255, 255, 1)),
+  background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0),rgba(0, 0, 0,0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, .2),rgba(0, 0, 0,.5),rgba(0, 0, 0, .8),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1)),
   url('/assets/neonbrand-mlZzMow-CQw-unsplash.jpg');
 }
 .el__inner {
@@ -729,7 +729,7 @@ body {
   width: 20PX;
 }
 .el__index-back {
-  color: #000000;
+  color: #ffffff;
   opacity: 0;
   -webkit-transition: opacity 0.25s 0.25s;
   transition: opacity 0.25s 0.25s;
@@ -939,4 +939,164 @@ body {
           transition-delay: 0.6s;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+/* ---------------------------carta de contacto*/
+@import url("https://rsms.me/inter/inter-ui.css");
+::selection {
+  background: #2d2f36;
+}
+::-webkit-selection {
+  background: #2d2f36;
+}
+::-moz-selection {
+  background: #2d2f36;
+}
+body {
+  background: white;
+  font-family: "Inter UI", sans-serif;
+  margin: 0;
+  padding: 20px;
+}
+.page {
+  background: #e2e2e5;
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 40px);
+  position: absolute;
+  place-content: center;
+  width: calc(100% - 40px);
+}
+@media (max-width: 767px) {
+  .page {
+    height: auto;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+}
+ #conTarjeta {
+  display: flex;
+  height: 320px;
+  margin: 0 auto;
+  width: 640px;
+  
+
+}
+@media (max-width: 767px) {
+  #conTarjeta  {
+    flex-direction: column;
+    height: 630px;
+    width: 320px;
+    
+  }
+}
+.left {
+  background: white;
+  height: calc(100% - 40px);
+  top: 20px;
+  position: relative;
+  width: 50%;
+}
+@media (max-width: 767px) {
+  .left {
+    height: 100%;
+    left: 20px;
+    width: calc(100% - 40px);
+    max-height: 270px;
+  }
+}
+.login {
+  font-size: 40px;
+  font-weight: 600;
+  margin: 30px 10px 30px;
+}
+.eula {
+  color: #999;
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 40px;
+}
+.right {
+  background: #ffffff;
+  box-shadow: 0px 0px 40px 16px rgba(0, 0, 0, 0.22);
+  color:  #000000;
+  position: relative;
+  width: 50%;
+  height:120%;
+
+}
+@media (max-width: 767px) {
+  .right {
+    flex-shrink: 0;
+    height: 100%;
+    width: 120%;
+    height:120%;
+  }
+}
+svg {
+  position: absolute;
+  width: 320px;
+}
+path {
+  fill: none;
+  stroke: url(#linearGradient);
+  stroke-width: 4;
+  stroke-dasharray: 240 1386;
+}
+.form {
+  margin: 40px;
+  position: absolute;
+}
+label {
+  color:  #000000;
+  display: block;
+  font-size: 14px;
+  height: 16px;
+  margin-top: 4%;
+
+}
+input {
+  background: transparent;
+ 
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  color:  #000000;
+  font-size: 20px;
+  height: 20px;
+  line-height: 30px;
+  outline: none !important;
+  width: 100%;
+  border-bottom-color: rgb(0, 0, 0);
+ 
+
+}
+input::-moz-focus-inner {
+  border: 0;
+  
+}
+#submit {
+  color: #ffffff;
+  margin-top: 40px;
+  transition: color 300ms;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-bottom: 7%;
+}
+#submit:focus {
+  color: #f2f2f2;
+  padding-bottom: 7%;
+
+}
+#submit:active {
+  color: #d0d0d2;
+  
+ 
+}
+ul{
+
+  list-style-type: none
+
 }
