--- a/views/pages/contactanos.ejs
+++ b/views/pages/contactanos.ejs
@@ -43,34 +43,50 @@
   </section>
    <!----------------------------------imagen principal----------------------------------->
 
-   <header >
-   
-    <div class="overlay" id="bkgCon">
+   <header>
+    <div class="overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+      <source src="/assets/smoke.mp4"  type="video/mp4">
+    </video>
+    <div class="container h-100">
       
-      <section class="contactanos " id="encuesta" style="margin-top: 2%;">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm" id="textoCon">
-              Lorem ipsum dolor sit amet consectetur adipiscing elit consequat dapibus montes accumsan rutrum ultricies tempus, nullam etiam ligula curabitur et platea sapien tristique leo lacinia at lectus. Dignissim enim blandit viverra interdum morbi ac tincidunt placerat nostra semper, rutrum ridiculus cras feugiat mattis porttitor purus ad luctus, dui maecenas eget penatibus lobortis facilisis elementum aenean egestas. Nam varius nibh quis justo pulvinar mollis leo orci cras eros euismod feugiat sem lobortis ad proin, tristique senectus accumsan iaculis ultricies ut scelerisque inceptos vivamus natoque platea integer velit commodo neque.
-            </div>
-            <div class="col-sm">
-              <div class="container-contactanos" >
-                <form action="action_page.php" >
-                  <label for="service" style="color: white;">Servicio</label>
-                  <input type="text" id="servicio-seleccion" name="service" placeholder="Servicio">
-              
-                  <label for="subject" style="color: white;">Mensaje</label>
-                  <textarea id="mensaje" name="subject" placeholder="Escribenos un Mensaje" style="height:200px"></textarea>
-              
-                  <input type="submit" value="Enviar">
-                </form>
-      
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+     
+
+<!--------- tarjeta------------->
+<div class="page" style="background: none;">
+  <div class="container" id="conTarjeta">
+    <div class="left">
+      <div class="login">CONTACTANOS</div>
+      <div class="eula">Dinos que servicio/proyecto te gustaria ordenar, nosotros nos pondremos en contacto lo mas rapido posible</div>
     </div>
+    <div class="right">
+ 
+      <div class="form">
+        <label for="email">Email</label>
+        <input type="email" id="email">
+        
+        <label >Tipo de Servicio</label>
+        <select id="cars" style="padding: 1%; margin-top: 2%;border-color:  #000000;border-width: 2px;">
+          <option value="volvo">Filro</option>
+          <option value="saab">App</option>
+          <option value="opel">Recorrido VR</option>
+          <option value="audi">Otro</option>
+        </select>
+
+        <label >Mensaje</label>
+        
+        <textarea name="Text1" cols="40" rows="1" style="margin-top:2%;border-color:  #000000;border-width: 2px;"></textarea>
+
+        <input type="submit" id="submit" value="Submit" style=" padding-bottom: 15%; margin-top: 8%;">
+      </div>
+    </div>
+  </div>
+</div>
+<!--------- tarjeta------------->
+</div>
+</div>
+</header>
+
     
     <footer>
       <div class="content">
@@ -80,8 +96,7 @@
             <li></li>
             <li></li>
             <li></li>
-          
-            <li></li>
+
           </ul>
         </nav>
       </div>
