--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -60,9 +60,10 @@
 
       <!---------------------Dos Mundos------------------------>
       <section id="dosMundos"   style="margin-top:4% ; ">
-        <h1 class="my-4 text-white" style ="text-align: center;">DOS MUNDOS
-     
-        </h1>
+        <section id="soluciones" style="margin-top: 7%; margin-bottom: 5%;">
+          <h1>DOS MUNDOS</h1>
+    
+      </section>
           <div class="container"  >
               <div class="row" style=" column-gap: 20px; display: flex; justify-content: center;"  >
                   <div class="col-md-4 mundo fondomundo "  style="height: 50% !important;padding: 9%;">
