--- a/views/pages/servicios.ejs
+++ b/views/pages/servicios.ejs
@@ -65,31 +65,38 @@
 <section >
   <div class="card-columns" >
     <div class="card" style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
       </div>
     </div>
     <div class="card" style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
+
       </div>
     </div>
     <div class="card"style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
+
       </div>
     </div>
     <div class="card"style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
+
       </div>
     </div>
     
@@ -105,31 +112,39 @@
 <section>
   <div class="card-columns" >
     <div class="card" style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
+
       </div>
     </div>
     <div class="card" style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
+
       </div>
     </div>
     <div class="card"style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
+
       </div>
     </div>
     <div class="card" style= "border-radius: 0%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="assets/patrick-schneider-87oz2SoV9Ug-unsplash.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary" style="border-radius: 0%; background-color: black;border-color: black;">Contactanos</a>
+
       </div>
     </div>
     
@@ -143,9 +158,9 @@
 <footer>
   <div class="content">
   <div class="logo"></div>
-  <nav>
+  <nav >
     <ul >
-      <li></li>
+      <li ></li>
       <li></li>
       <li></li>
      
